--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -37,7 +37,7 @@ LPPE_SRN_DATA_SCAN_INJECT_TIME=2
 # without EULA consent, but the uncertainty can be high.
 # QNP preferred mode prefers QNP when there is EULA consent,
 # otherwise OSNLP is used.
-NLP_MODE = 4
+NLP_MODE = 1
 NLP_MODE_EMERGENCY = 2
 NLP_TOLERANCE_TIME_FIRST = 5000
 NLP_TOLERANCE_TIME_AFTER = 20000
@@ -103,12 +103,12 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
-GTP_CELL=BASIC
+GTP_CELL=DISABLED
 
 #GTP_WIFI valid modes:
 # DISABLED
 # BASIC
-GTP_WIFI=BASIC
+GTP_WIFI=DISABLED
 
 #GTP_WAA valid modes:
 # DISABLED
@@ -119,7 +119,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=PREMIUM
+SAP=BASIC
 
 #ODCPI valid modes:
 #DISABLED
