--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -62,7 +62,7 @@ on post-fs-data
     mkdir /persist/qti_fp 0700 system system
 
 #Create folder for mm-qcamera-daemon
-mkdir /data/misc/camera 0770 camera camera
+mkdir /data/vendor/qcam/ 0770 camera camera
 
 #start camera server as daemon
 service qcamerasvr /system/vendor/bin/mm-qcamera-daemon
