mido: append vendor to per_proxy service
* to allow proxy service to start/stop:
  on property:init.svc.per_mgr=running
    start vendor.per_proxy
  on property:sys.shutdown.requested=*
    stop vendor.per_proxy

Change-Id: I357d4640899f6a65d626f2131b3c44d43fae048a

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -73,7 +73,7 @@ service per_mgr /vendor/bin/pm-service
     ioprio rt 4
     writepid /dev/cpuset/system-background/tasks
 
-service per_proxy /vendor/bin/pm-proxy
+service vendor.per_proxy /vendor/bin/pm-proxy
     class core
     user system
     group system
