--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -258,6 +258,7 @@ on property:vendor.radio.atfwd.start=false
 on property:vold.decrypt=trigger_restart_framework
     restart vendor.camera-provider-2-4
     restart vendor.audio-hal-2-0
+    restart vendor.fps_hal
 
 on property:persist.env.fastdorm.enabled=true
     setprop persist.radio.data_no_toggle 1
