mido: Update TUI blobs from LA.UM.8.6.2.r1-07600-89xx.0
* also create dir for TUI & add execute permissions to allow dir search (stat)
for /data/vendor/tui directory.

Change-Id: I598bea123e31a35d23558f58afc4ab8c386aaadd

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -202,6 +202,9 @@ on post-fs-data
     # Secure Element directory for loader service functionality
     mkdir /data/vendor/secure_element 0770 secure_element secure_element
 
+    # Create dir for TUI
+    mkdir /data/vendor/tui 0700 system drmrpc
+
     # Mark the copy complete flag to not completed
     write /data/vendor/radio/copy_complete 0
     chown radio radio /data/vendor/radio/copy_complete
