--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -157,6 +157,11 @@ on charger
     start thermal-engine
 
 on boot
+# Flashlight
+    chown root system /sys/class/leds/led:torch_1/max_brightness
+    chmod 0660 /sys/class/leds/led:torch_1/max_brightness
+    write /sys/class/leds/led:torch_1/max_brightness 0
+
 # Update cpusets on boot and we want better load balancing
     write /dev/cpuset/top-app/cpus 0-7
     write /dev/cpuset/foreground/cpus 0-6
