mido: init: Create /data/vendor/tombstones/ for tftp requirement
tftp_server ramdump feature needs /data/vendor/tombstones
dir with uid/gid as system

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -151,6 +151,7 @@ on post-fs-data
     mkdir /data/vendor/ramdump/bluetooth 0770 bluetooth bluetooth
 
     # Create directory for tftp
+    mkdir /data/vendor/tombstones 0771 system system
     mkdir /data/vendor/tombstones/rfs 0771 system system
 
     # Create the directories used by the Wireless subsystem
