mido: Update thermal from Olive
* from olive-user 10 QKQ1.191014.001 V11.0.1.0.QCNCNXM release-keys

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -42,6 +42,9 @@ on fs
     mkdir /mnt/vendor/persist/bms 0700 root system
     restorecon_recursive /mnt/vendor/persist
 
+    chmod 0664 /sys/class/thermal/thermal_message/sconfig
+    chown system system /sys/class/thermal/thermal_message/sconfig
+
 on init
     write /dev/stune/foreground/schedtune.sched_boost_no_override 1
     write /dev/stune/top-app/schedtune.sched_boost_no_override 1
@@ -58,6 +61,17 @@ on init
     chown cameraserver cameraserver /dev/cpuset/camera-daemon/tasks
     chmod 0660 /dev/cpuset/camera-daemon/tasks
    chown system system /sys/kernel/hbtp/display_pwr
+
+service thermal-engine /vendor/bin/thermal-engine
+   class main
+   user root
+   #chmod 0664 /sys/class/thermal/thermal_message/sconfig
+   #chown system system /sys/class/thermal/thermal_message/sconfig
+   socket thermal-send-client stream 0666 system system
+   socket thermal-recv-client stream 0660 system system
+   socket thermal-recv-passive-client stream 0666 system system
+   socket thermal-send-rule stream 0660 system system
+   group root
 
 on post-fs
     start vendor.qseecomd
@@ -100,16 +114,6 @@ on property:sys.shutdown.requested=*
 service vendor.qseecomd /vendor/bin/qseecomd
    class core
    user root
-   group root
-   writepid /dev/cpuset/system-background/tasks
-
-service thermal-engine /vendor/bin/thermal-engine
-   class main
-   user root
-   socket thermal-send-client stream 0666 system system
-   socket thermal-recv-client stream 0660 system system
-   socket thermal-recv-passive-client stream 0666 system system
-   socket thermal-send-rule stream 0660 system system
    group root
    writepid /dev/cpuset/system-background/tasks
 
