mido: Create new directory for Bluetooth SoC dump
Create new directory for Bluetooth SoC dump/logs
collection for new Android P dump format

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -140,6 +140,9 @@ on boot
 on post-fs-data
     mkdir /data/vendor/misc 01771 system system
 
+    # Create directory used for dump collection
+    mkdir /data/vendor/ssrdump 0770 root system
+
     # Create directory used by display clients
     mkdir /data/vendor/display 0770 system graphics
 
